server: s/doc/document to avoid confusion
